# go2-autonomous-patrol

./: LICENSE  NOTES  README.md
go2_champ_config/: CMakeLists.txt  package.xml
go2_champ_config/launch/: bringup.launch.py  gazebo.launch.py
go2_controller/: CMakeLists.txt  package.xml
go2_controller/config/autonomy/: nav2.yaml
go2_controller/launch/: bringup.launch.py
go2_description/: CMakeLists.txt  package.xml
go2_description/config/: ros_control.yaml
go2_description/launch/: description_bringup.launch.py  robot_description.launch.py
go2_description/rviz/: visualize.rviz
go2_description/urdf/: go2.urdf.xacro
go2_description/xacro/: const.xacro  gz.xacro  leg.xacro  robot.xacro
go2_simulation/: CMakeLists.txt  package.xml
go2_simulation/config/: ros_gz_bridge.yaml
go2_simulation/launch/: go2_spawn.launch.py  sim.launch.py
go2_simulation/worlds/: warehouse.sdf
